welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:3: error: ';' expected but 'return' found.
  for (i<- nums) {if (i==lookingFor){n=n+1}}return n} 
                                            ^