welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.code
def occurrences(nums:Array[Int],lookingFor:Int):Int = {
  var n=0
  for (i<- nums) {if (i==lookingFor){n=n+1}}return n}